eks-context/deployments.yml
# Users Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: ap-utopia
  labels:
    app: users-microservice
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: users

  # Pod Description
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: ${USERS_IMAGE}
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
# Flights Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights
  namespace: ap-utopia
  labels:
    app: flights-microservice
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: flights

  # Pod Description
  template:
    metadata:
      labels:
        app: flights
    spec:
      containers:
      - name: flights
        image: ${FLIGHTS_IMAGE}
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
# Bookings Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings
  namespace: ap-utopia
  labels:
    app: bookings-microservice
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: bookings

  # Pod Description
  template:
    metadata:
      labels:
        app: bookings
    spec:
      containers:
      - name: bookings
        image: ${BOOKINGS_IMAGE}
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
