eks-context/services.yml
# Users Service
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: ap-utopia
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP

---
# Flights Service
apiVersion: v1
kind: Service
metadata:
  name: flights-svc
  namespace: ap-utopia
spec:
  selector:
    app: flights
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP

---
# Bookings Service
apiVersion: v1
kind: Service
metadata:
  name: bookings-svc
  namespace: ap-utopia
spec:
  selector:
    app: bookings
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
